--- a/index-en.html
+++ b/index-en.html
@@ -252,14 +252,14 @@
       </div>
     </header>
     <section class="banner">
-      <a href="#booking"  class="booking-btn"><div style="width:27px"></div>BOOK NOW<div style="width:27px"></div></a>
-      <img class="pc" src="./static/images/Header.svg" style="max-width: 100%; width: 100%" />
+      <a href="#booking"  class="booking-btn en">BOOK NOW</a>
+      <img class="pc" src="./static/images/Header-en.svg" style="max-width: 100%; width: 100%" />
       <img class="mobile" src="./static/images/banner-mobile.svg" style="width: 100%;height: auto;" />
     </section>
     <section id="gt" class="gt">
-      <img class="mobile" src="./static/images/gt-mobile-en.png" style="width: 100%;height: auto;" alt="">
+      <img class="mobile" src="./static/images/about-mb.svg" style="width: 100%;height: auto;" alt="">
       <div class="container">
-        <img class="gt-btn pc" src="./static/images/menu-gt-112-en.png" style="max-width: 100%;" alt="">
+        <img class="gt-btn pc" src="./static/images/about.svg" style="max-width: 100%;" alt="">
         <div class="gt-content">
             <p>
               Despite the uncertainties of the global economy, Vietnam remains a bright spot with GDP growth forecasted to reach 7.5 per cent in 2022, inflation under control, the supply chain recovering strongly, and disbursement of foreign investment capital in the first eight months of the year reached a record of $12.8 billion.
@@ -466,7 +466,7 @@
         </div>
       </div>
       <img class="mobile" src="./static/images/doi-tuong-mb.svg" style="width: 100%;height: auto;" /> 
-      <img class="mobile" src="./static/images/lich-dien-mb-en.png" style="width: 100%;height: auto; padding: 24px 0px;" /> 
+      <img class="mobile" src="./static/images/lich-dien-mb-en.svg" style="width: 100%;height: auto; padding: 24px 0px;" /> 
     </section>
     <section id="chuong-trinh" class="chuong-trinh">
       <div class="pc">
