--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
           <div class="row">
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-1-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-1-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(1)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -585,7 +585,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-2-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-2-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(2)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -604,7 +604,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-3-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-3-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(3)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -621,7 +621,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-4-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-4-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(4)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -638,7 +638,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-5-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-5-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(5)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -656,7 +656,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-6-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-6-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(6)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -673,7 +673,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-7-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-7-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(7)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -690,7 +690,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-8-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-8-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(8)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -706,7 +706,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-9-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-9-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(9)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
@@ -723,7 +723,7 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-10-kx.png" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-10-kx.svg" style="max-width: 100%;cursor: grab;"
                   onclick="show(10)" />
                 <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
