dien-gia-mb-reponsive

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <section class="banner">
       <a href="#booking" class="booking-btn">MỜI ĐẶT VÉ TẠI ĐÂY</a>
       <img class="pc" src="./static/images/Header.svg" style="max-width: 100%; width: 100%" />
-      <img class="mobile" src="./static/images/banner-mobile.svg" style="width: 100%;height: auto;" />
+      <img class="mobile" src="./static/images/top-banner.svg" style="width: 100%;height: auto;" />
     </section>
     <section id="gt" class="gt">
       <img class="mobile" src="./static/images/gt-mobile.svg" style="width: 100%;height: auto;" alt="">
@@ -567,15 +567,15 @@
           <div class="row">
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-1-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-1-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(1)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
-                  <div style="line-height: 13px;" class="dx-dg">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
+                  <div class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Warrick Cleine</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Warrick Cleine</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Chủ tịch kiêm Tổng giám đốc </div>
                     <div>KPMG Việt Nam và Campuchia
                     </div>
@@ -585,15 +585,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-2-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-2-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(2)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
-                  <div style="line-height: 13px;" class="dx-dg">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
+                  <div class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Masataka “Sam” Yoshida</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Masataka “Sam” Yoshida</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Giám đốc toàn cầu Dịch vụ mua</div>
                     <div>bán - sáp nhâp xuyên quốc gia,</div>
                     <div>RECOF Corporation, </div>
@@ -604,15 +604,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-3-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-3-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(3)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Andy Ho</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Andy Ho</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Giám đốc điều hành – Quản lý đầu tư</div>
                     <div>Tập đoàn VinaCapital</div>
                   </div>      
@@ -621,15 +621,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-4-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-4-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(4)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Seck Yee Chung</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Seck Yee Chung</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Luật sư điều hành </div>
                     <div>Công ty Luật Baker McKenzie</div>
                   </div>      
@@ -638,15 +638,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-5-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-5-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(5)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Kazuhiko Yoshimatsu</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Kazuhiko Yoshimatsu</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Tổng giám đốc kiêm Trưởng đại</div>
                     <div>diện Sở Giao dịch Chứng khoán</div>
                     <div>Tokyo (Singapore)</div>
@@ -656,15 +656,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-6-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-6-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(6)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Bà</div>
-                    <div style="font-size: 12px;font-weight: 700;">Trang Bùi</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Trang Bùi</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Tổng giám đốc </div>
                     <div>Công ty Cushman & Wakefield Việt Nam</div>
                   </div>      
@@ -673,15 +673,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-7-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-7-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(7)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Bà</div>
-                    <div style="font-size: 12px;font-weight: 700;">Bình Lê Vandekerckove</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Bình Lê Vandekerckove</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Nhà Sáng Lập & Tổng Giám Đốc, </div>
                     <div>Công ty Tư vấn Thương vụ ASART</div>
                   </div>      
@@ -690,15 +690,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-8-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-8-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(8)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Lê Khánh Lâm</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Lê Khánh Lâm</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Chủ tịch Công ty RSM Việt Nam</div>
                   </div>      
                 </div>
@@ -706,15 +706,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-9-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-9-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(9)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Phạm Duy Khương</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Phạm Duy Khương</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Giám đốc điều hành </div>
                     <div>Công ty ASL Law</div>
                   </div>      
@@ -723,15 +723,15 @@
             </div>
             <div class="col-6" style="padding-bottom: 10px;">
               <div class="position-relative">
-                <img src="./static/images/dien-gia-10-kx.svg" style="max-width: 100%;cursor: grab;"
+                <img src="./static/images/dien-gia-10-kx.png" style="max-width: 100%;cursor: grab;"
                   onclick="show(10)" />
-                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 8px;text-align: center;">
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
                   <div style="line-height: 13px;" class="dx-dg">
                     <div>Ông</div>
-                    <div style="font-size: 12px;font-weight: 700;">Nguyễn Đức Dũng</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Nguyễn Đức Dũng</div>
                   </div> 
                   <br>
-                  <div style="line-height: 10px;font-family: 'Roboto';" class="cv-dg">
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Thành viên HĐQT</div>
                     <div>Giám đốc tài chính Novaland</div>
                   </div>      
