--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
           </td>
           <td class="header-right text-right languages">
             <div class="inline-block">
-              <a href="/belgian-beer-festival-2017" class="lang vi"></a>
+              <a href="/index.html" class="lang vi"></a>
             </div>
             <div class="inline-block">
-              <a href="/belgian-beer-festival-2017/en" class="lang en"></a>
+              <a style="padding: 0;" href="/index-en.html" class="lang en"></a>
             </div>
           </td>
         </tr>
@@ -741,7 +741,6 @@
           </div>
         </div>
       </div>
-      </div>
     </section>
     <section class="binh-chon">
       <img class="pc" src="./static/images/binh-chon.svg" style="max-width: 100%; width: 100%" alt="">
@@ -750,9 +749,7 @@
         <img class="mobile" src="./static/images/vinh-danh-title.svg" style="width: 100%;height: auto;background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" />
         <img class="mobile" src="./static/images/a8d6d2da4ed0898ed0c1.jpeg" style="width: 100%;height: auto;background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" />
         <img class="mobile" src="./static/images/vinh-danh-text.svg" style="width: 100%;height: auto;" />
-      </div>
-      <!-- <img class="mobile" src="./static/images/vinh-danh-mb.svg" style="width: 100%;height: auto;" /> -->
-      
+      </div>      
       <img class="mobile" src="./static/images/thoi-gian-mb.svg" style="width: 100%;height: auto;" />
 
     </section>
@@ -854,10 +851,10 @@
               <p>TicketBox Co. Ltd. © 2016</p>
               <div class="languages">
                 <div class="inline-block">
-                  <a href="#" class="lang vi"></a>
+                  <a href="./index.html" class="lang vi"></a>
                 </div>
                 <div class="inline-block">
-                  <a href="#" class="lang en"></a>
+                  <a style="padding: 0;" href="./index-en.html" class="lang en"></a>
                 </div>
               </div>
             </div>
