--- a/index-en.html
+++ b/index-en.html
@@ -31,8 +31,8 @@
   <!-- <meta property="og:image:url" content="https://static.tkbcdn.com/static-page/img/BelgianBeer_fb_thumb.jpg" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <link rel="stylesheet" href="./static/index.css">
-
   <!-- Custom CSS -->
   <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -182,7 +182,7 @@
         <div class="header-container">
           <ul class="menu">
             <li class="menu-item">
-              <a href="#gt" class="menu-link">about</a>
+              <a href="#gt" class="menu-link">Introduction</a>
             </li>
             <li class="menu-item">
               <a href="#chuong-trinh" class="menu-link">Agenda</a>
@@ -211,7 +211,7 @@
           <div style="padding-left: 15px;" >
             
               <div >
-                <a href="#gt" class="menu-link">about</a>
+                <a href="#gt" class="menu-link">Introduction</a>
               </div>
               
               <div>
@@ -280,13 +280,13 @@
                 Benefits of participation:
               </span>
               <p>
-                . <span style="color: #FF6600; transform: uppercase;">Meeting</span> enior executives of the Vietnamese business circle and those from Japan, the Republic of Korea, the US, Europe, and Southeast Asia.
+                . <span style="color: #FF6600; transform: uppercase;">Meeting </span> senior executives of the Vietnamese business circle and those from Japan, the Republic of Korea, the US, Europe, and Southeast Asia.
               </p>
               <p>
                 . <span style="color: #FF6600; transform: uppercase;">Connecting</span> with potential partners and share opportunities in M&A and strategic co-operation.
               </p>
               <p>
-                . <span style="color: #FF6600; transform: uppercase;">Exchanging</span> M&A experience<br> n Vietnam and meet the insiders of the most outstanding deals and advisory firms of 2021-2022.
+                . <span style="color: #FF6600; transform: uppercase;">Exchanging</span> M&A experience<br> in Vietnam and meet the insiders of the most outstanding deals and advisory firms of 2021-2022.
               </p>
             </div>
             <div style="padding-right: 10px;">
@@ -370,7 +370,7 @@
             </div>
           </div>
         </div>
-        <img src="./static/images/doi-tuong-tham-du-en.png" style="max-width: 100%; width: 100%" alt="" class="doi-tuong-tham-du pc">
+        <img src="./static/images/doi-tuong-tham-du-en.svg" style="max-width: 100%; width: 100%" alt="" class="doi-tuong-tham-du pc">
         <img src="./static/images/lich-trinh-en.svg" style="max-width: 100%; width: 100%" alt="" class="lich-trinh pc">
       </div>
       <img class="mobile" src="./static/images/diem-nhan-mb-en.svg" style="width: 100%;height: auto;" />
@@ -455,7 +455,7 @@
             Benefits of participation:
           </span>
           <p>
-            . <span style="color: #FF6600; transform: uppercase;">Meeting</span>senior executives of the Vietnamese business circle and those from Japan, the Republic of Korea, the US, Europe, and Southeast Asia.
+            . <span style="color: #FF6600; transform: uppercase;">Meeting</span> senior executives of the Vietnamese business circle and those from Japan, the Republic of Korea, the US, Europe, and Southeast Asia.
           </p>
           <p>
             . <span style="color: #FF6600; transform: uppercase;">Connecting</span> with potential partners and share opportunities in M&A and strategic co-operation.
@@ -828,19 +828,6 @@
     </div>
   </footer>
 
-  <link href="https://static.tkbcdn.com/site/global/content-v2/styles/alert-bar.css?v8" rel="stylesheet">
-  <div data-opm="topbanner" id="android-ads" class="app-ads ads-alert" style="max-height: 56px; display: none">
-    <a data-opm="go" href="/Layout/AlertBarAndroid" data-name="ticketbox-android-app-banner-2" target="_blank">
-      <img src="https://static.tkbcdn.com/images-v2/app/events/Tet_Banner.png" />
-    </a>
-    <div class="close"></div>
-  </div>
-  <div data-opm="topbanner" id="ios-ads" class="app-ads ads-alert" style="max-height: 56px; display: none">
-    <a data-opm="go" href="/Layout/AlertBarIOS" data-name="ticketbox-ios-app-banner" target="_blank">
-      <img src="https://static.tkbcdn.com/images-v2/app/events/Tet_Banner.png" />
-    </a>
-    <div class="close"></div>
-  </div>
   <script>
     //   var myCarousel = document.querySelector('#myCarousel')
     // var carousel = new bootstrap.Carousel(myCarousel)
@@ -866,7 +853,7 @@
       location.replace("https://ticketbox.vn/event/85274/ticket-booking/68016?opm=tbox.edp.info.booking#/step-select-tickets")
     }
     function virPage(){
-      location.replace("https://docs.google.com/forms/d/e/1FAIpQLSfpkXy4XM8O-KKFHOmGpdRtcCo1UrBvzzfJ9szGwQhGNKlPMA/viewform")
+      location.replace("https://docs.google.com/forms/d/1WbVMuPMLUjtR3xwir3_n8ojBG1uipyWTnxM78TE3Wn8/edit")
     }
   </script>
 
