remove header footer tkb

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-  <div class="tkb-header color-white">
+  <!-- <div class="tkb-header color-white">
     <table class="w-100">
       <tbody class="w-100 valign-middle">
         <tr>
@@ -174,7 +174,7 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div> -->
 
   <!-- landingpage content -->
   <main class="landingpage-content relative">
@@ -806,7 +806,7 @@
   </main>
   <!-- end landingpage content -->
 
-  <footer class="tkb-footer">
+  <!-- <footer class="tkb-footer">
     <div class="w-100">
       <div class="up-footer w-100">
         <div class="container">
@@ -870,7 +870,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <script>
     //   var myCarousel = document.querySelector('#myCarousel')
