--- a/index-en.html
+++ b/index-en.html
@@ -149,7 +149,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-  <div class="tkb-header color-white">
+  <!-- <div class="tkb-header color-white">
     <table class="w-100">
       <tbody class="w-100 valign-middle">
         <tr>
@@ -173,7 +173,7 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div> -->
 
   <!-- landingpage content -->
   <main class="landingpage-content relative">
@@ -762,7 +762,7 @@
   </main>
   <!-- end landingpage content -->
 
-  <footer class="tkb-footer">
+  <!-- <footer class="tkb-footer">
     <div class="w-100">
       <div class="up-footer w-100">
         <div class="container">
@@ -826,7 +826,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <script>
     //   var myCarousel = document.querySelector('#myCarousel')
