--- a/index-en.html
+++ b/index-en.html
@@ -26,9 +26,9 @@
   <meta property="og:title" content="M&A Vietnam 2022" />
   <meta name="description" content="">
   <meta property='og:description' content="" />
-  <!-- <link rel="image_src" href="https://static.tkbcdn.com/static-page/img/BelgianBeer_fb_thumb.jpg" /> -->
-  <!-- <meta property="og:image" content="https://static.tkbcdn.com/static-page/img/BelgianBeer_fb_thumb.jpg" /> -->
-  <!-- <meta property="og:image:url" content="https://static.tkbcdn.com/static-page/img/BelgianBeer_fb_thumb.jpg" /> -->
+  <link rel="image_src" href="https://vir.com.vn/data/VIR-Events/mavietnam/static/images/Header.png" />
+  <meta property="og:image" content="https://vir.com.vn/data/VIR-Events/mavietnam/static/images/Header.png" />
+  <meta property="og:image:url" content="https://vir.com.vn/data/VIR-Events/mavietnam/static/images/Header.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
@@ -705,6 +705,7 @@
           </div>
         </div>
       </div>
+      <div style="padding-bottom: 20px;" class="updating">To be updated...</div>
     </section>
     <section class="binh-chon">
       <img class="pc" src="./static/images/binh-chon-en.svg" style="max-width: 100%; width: 100%" alt="">
