--- a/index-en.html
+++ b/index-en.html
@@ -262,7 +262,7 @@
         <img class="gt-btn pc" src="./static/images/about.svg" style="max-width: 100%;" alt="">
         <div class="gt-content">
             <p>
-              Despite the uncertainties of the global economy, Vietnam remains a bright spot with GDP growth forecasted to reach 7.5 per cent in 2022, inflation under control, the supply chain recovering strongly, and disbursement of foreign investment capital in the first eight months of the year reached a record of $12.8 billion.
+              Despite the uncertainties of the global economy, Vietnam remains a bright spot with GDP growth forecasted to reach 8 per cent in 2022, inflation under control, the supply chain recovering strongly, and disbursement of foreign investment capital in the first nine months of the year reached a record of $15.4 billion.
             </p>
             <p>
               Along with the strong economic recovery, M&A activities in Vietnam are forecasted to be vibrant again in the near future, especially in the context of domestic capital flow is tightened, many businesses have to restructure, sell assets, and call for investment due to financial pressure.
