--- a/index.html
+++ b/index.html
@@ -270,10 +270,7 @@
         <img class="gt-btn pc" src="./static/images/mt-gt-112.svg" style="max-width: 100%;" alt="">
         <div class="gt-content">
           <p>
-            Bất chấp những bất ổn của kinh tế toàn cầu, Việt Nam vẫn nổi lên là điểm sáng với mức tăng trưởng GDP năm
-            2022
-            được dự báo có thể đạt 7,5%, lạm phát được kiểm soát, chuỗi cung ứng phục hồi mạnh mẽ, giải ngân vốn đầu tư
-            nước ngoài trong 8 tháng đầu năm đạt mức kỷ lục 12,8 tỷ USD….
+            Bất chấp những bất ổn của kinh tế toàn cầu, Việt Nam vẫn nổi lên là điểm sáng với mức tăng trưởng GDP năm 2022 được dự báo có thể đạt 8%, lạm phát được kiểm soát, chuỗi cung ứng phục hồi mạnh mẽ, giải ngân vốn đầu tư nước ngoài trong 9 tháng đầu năm đạt mức kỷ lục 15,4 tỷ USD….
           </p>
           <p>
             Cùng với sự phục hồi kinh tế mạnh mẽ, hoạt động M&A tại Việt Nam được dự báo sẽ sôi động trở lại trong thời
