--- a/index-en.html
+++ b/index-en.html
@@ -524,6 +524,9 @@
             <div class="col-sm-3 col-xs-6">
               <img src="./static/images/dien-gia-9-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(9)" />
             </div>
+            <div class="col-sm-3 col-xs-6">
+              <img src="./static/images/dien-gia-10-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(10)" />
+            </div>
           </div>
         </div>
       </div>
@@ -576,6 +579,7 @@
                   </div> 
                   <br>
                   <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
+                    <div>Managing Director</div>
                     <div>Group Chief Investment Officer</div>
                     <div>VinaCapital</div>
                   </div>      
@@ -678,6 +682,23 @@
                   <br>
                   <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
                     <div>Managing Partner, ASL Law  </div>
+                  </div>      
+                </div>
+              </div>
+            </div>
+            <div class="col-6" style="padding-bottom: 10px;">
+              <div class="position-relative">
+                <img src="./static/images/dien-gia-10-kx.png" style="max-width: 100%;cursor: grab;"
+                  onclick="show(10)" />
+                <div class="position-absolute" style="bottom: 5%; width: 100%; color: #FFFFFF;font-family: 'Mulish';font-style: normal;font-weight: 400;font-size: 2vw;text-align: center;">
+                  <div style="line-height: 13px;" class="dx-dg">
+                    <div>Mr</div>
+                    <div style="font-size: 3vw;font-weight: 700;">Andrew Chan</div>
+                  </div> 
+                  <br>
+                  <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
+                    <div>Deputy General Director</div>
+                    <div>Gamuda Land HCMC Joint Stock Company</div>
                   </div>      
                 </div>
               </div>
